Increase spacing of hint panels on mobile. Fixes #108

--- a/bee-redux/src/styles/_hints.scss
+++ b/bee-redux/src/styles/_hints.scss
@@ -73,12 +73,9 @@
 .HintPanels {
   display: flex;
   flex-direction: column;
-  gap: 12px;
-  .App___twoColumns & {
-    gap: 8px;
-  }
-  .App___oneColumn & {
-    gap: 4px;
+  gap: 8px;
+  .App___threeColumns & {
+    gap: 12px;
   }
 }
 
